# uv

./: Cargo.toml  uv.schema.json
.github/workflows/: ci.yml
crates/distribution-filename/src/: lib.rs
crates/uv/: Cargo.toml
crates/uv-auth/src/: middleware.rs
crates/uv-cli/src/: lib.rs
crates/uv-client/src/: base_client.rs
crates/uv-distribution/: Cargo.toml
crates/uv-distribution/src/: download.rs
crates/uv-distribution/src/source/: mod.rs
crates/uv-metadata/src/: lib.rs
crates/uv-publish/: Cargo.toml
crates/uv-publish/src/: lib.rs
crates/uv-python/src/: discovery.rs  lib.rs  virtualenv.rs
crates/uv-settings/src/: combine.rs  settings.rs
crates/uv/src/: lib.rs  settings.rs
crates/uv/src/commands/: publish.rs
crates/uv/src/commands/project/: add.rs
crates/uv/tests/: help.rs  lock.rs  pip_compile.rs  pip_install.rs  tool_install.rs
crates/uv/tests/common/: mod.rs
docs/configuration/: environment.md
docs/reference/: cli.md  settings.md
scripts/publish/: test_publish.py
